# advent-of-code-rs

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: rust.yml
2023/day-1/: Cargo.toml  README.md
2023/day-1/example/: main.rs
2023/day-1/src/: lib.rs  main.rs
2023/day-10/: Cargo.toml  README.md
2023/day-10/example/: main.rs
2023/day-10/src/: lib.rs
2023/day-11/: Cargo.toml  README.md
2023/day-11/example/: main.rs
2023/day-11/src/: lib.rs
2023/day-2/: Cargo.toml  README.md
2023/day-2/example/: main.rs
2023/day-2/src/: lib.rs  main.rs
2023/day-3/: Cargo.toml  README.md
2023/day-3/example/: main.rs
2023/day-3/src/: lib.rs
2023/day-4/: Cargo.toml  README.md
2023/day-4/example/: main.rs
2023/day-4/src/: lib.rs
2023/day-5/: Cargo.toml  README.md
2023/day-5/example/: main.rs
2023/day-5/src/: lib.rs  macros.rs
2023/day-6/: Cargo.toml  README.md
2023/day-6/example/: main.rs
2023/day-6/src/: lib.rs
2023/day-7/: Cargo.toml  README.md
2023/day-7/example/: main.rs
2023/day-7/src/: lib.rs
2023/day-8/: Cargo.toml  README.md
2023/day-8/example/: main.rs
2023/day-8/src/: lib.rs
2023/day-9/: Cargo.toml  README.md
2023/day-9/example/: main.rs
2023/day-9/src/: lib.rs
2024/day-1/: Cargo.toml  README.md
2024/day-1/example/: main.rs
2024/day-1/src/: lib.rs
2024/day-2/: Cargo.toml  README.md
2024/day-2/example/: main.rs
2024/day-2/src/: lib.rs
utils/: Cargo.toml  README.md
utils/src/: lib.rs
