[package]
name = "aoc-2023-day-1"
description = "Advent of Code 2023, Day 1: Trebuchet?!"
authors = ["Markus Mayer <github@widemeadows.de>"]
homepage = "https://adventofcode.com/2023/day/1"
repository = "https://github.com/sunsided/aoc-rs"
readme = "README.md"
license = "EUPL-1.2"
version = "0.1.0"
edition = "2021"

[[example]]
name = "2023-day-1"
path = "example/main.rs"

[dependencies]
lazy_static = "1.5.0"

[dev-dependencies]
rstest = "0.18.2"
