[package]
name = "aoc-2023-day-2"
description = "Advent of Code 2023, Day 2: Cube Conundrum"
authors = ["Markus Mayer <github@widemeadows.de>"]
homepage = "https://adventofcode.com/2023/day/2"
repository = "https://github.com/sunsided/aoc-rs"
readme = "README.md"
license = "EUPL-1.2"
version = "0.1.0"
edition = "2021"

[[example]]
name = "2023-day-2"
path = "example/main.rs"

[dev-dependencies]
rstest = "0.18.2"
