[package]
name = "aoc-2023-day-5"
description = "Advent of Code 2023, Day 5: If You Give A Seed A Fertilizer"
authors = ["Markus Mayer <github@widemeadows.de>"]
homepage = "https://adventofcode.com/2023/day/5"
repository = "https://github.com/sunsided/aoc-rs"
readme = "README.md"
license = "EUPL-1.2"
version = "0.1.0"
edition = "2021"

[[example]]
name = "2023-day-5"
path = "example/main.rs"

[dependencies]
aoc-utils = { path = "../../utils" }
itertools = "0.12.0"
paste = "1.0.14"
log = "0.4.20"
