[package]
name = "aoc-2023-day-7"
description = "Advent of Code 2023, Day 7: Camel Cards"
authors = ["Markus Mayer <github@widemeadows.de>"]
homepage = "https://adventofcode.com/2023/day/7"
repository = "https://github.com/sunsided/aoc-rs"
readme = "README.md"
license = "EUPL-1.2"
version = "0.1.0"
edition = "2021"

[[example]]
name = "2023-day-7"
path = "example/main.rs"

[dependencies]
aoc-utils = { path = "../../utils" }
