[package]
name = "aoc-2023-day-8"
description = "Advent of Code 2023, Day 8: Haunted Wasteland"
authors = ["Markus Mayer <github@widemeadows.de>"]
homepage = "https://adventofcode.com/2023/day/8"
repository = "https://github.com/sunsided/aoc-rs"
readme = "README.md"
license = "EUPL-1.2"
version = "0.1.0"
edition = "2021"

[[example]]
name = "2023-day-8"
path = "example/main.rs"
