[package]
name = "aoc-2024-day-2"
description = "Advent of Code 2024, Day 2: Red-Nosed Reports"
authors = ["Markus Mayer <github@widemeadows.de>"]
homepage = "https://adventofcode.com/2024/day/2"
repository = "https://github.com/sunsided/aoc-rs"
readme = "README.md"
license = "EUPL-1.2"
version = "0.1.0"
edition = "2021"

[[example]]
name = "2024-day-2"
path = "example/main.rs"

[dependencies]
aoc-utils = { path = "../../utils" }
